Fixed overlapping issues when logged out of search bar

--- a/navigation_dev.css
+++ b/navigation_dev.css
@@ -76,7 +76,7 @@
     right: 0;
     display: block;
     position: absolute;
-    top: 35px;
+    top: 45px;
 }
 
 .dropdown-menu {
